k8s/istio/keycloak-service-entry-staging.yaml
# File này dùng để fix lỗi mạng khi bật Istio mTLS.
# Tránh luồng traffic từ Spring Boot gọi ra NGINX Ingress bên ngoài,
# thay vào đó điều hướng thẳng đến service nội bộ của Keycloak để tránh timeout.
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-keycloak
  namespace: staging
spec:
  hosts:
  - identity.yas.local.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
  endpoints:
  - address: keycloak-service.keycloak.svc.cluster.local
    ports:
      http: 80
